adapt sub pages

--- a/90s_overlay/index-aim.html
+++ b/90s_overlay/index-aim.html
@@ -301,10 +301,9 @@
 
       <div class="buddy-group">
         <div class="buddy-group-header">▼ Bandmates (3/4)</div>
-        <div class="buddy-item"><a href="../zamoranoandstamer.html"><span class="buddy-dot"></span>FinnStamer_Geige</a></div>
-        <div class="buddy-item"><a href="../mental-pocus-records.html"><span class="buddy-dot"></span>DanicaHobden_MPR</a></div>
-        <div class="buddy-item"><a href="../improvisation.html"><span class="buddy-dot away"></span>WARMBLUETIG_Bassist</a></div>
-        <div class="buddy-item"><a href="../improvisation.html"><span class="buddy-dot idle"></span>SPIIC_VlatkoKucan</a></div>
+        <div class="buddy-item"><a href="zamoranoandstamer.html"><span class="buddy-dot"></span>FinnStamer_Geige</a></div>
+        <div class="buddy-item"><a href="improvisation.html"><span class="buddy-dot away"></span>WARMBLUETIG_Bassist</a></div>
+        <div class="buddy-item"><a href="improvisation.html"><span class="buddy-dot idle"></span>SPIIC_VlatkoKucan</a></div>
       </div>
 
       <div class="buddy-group">
@@ -321,9 +320,9 @@
       </div>
 
       <div class="aim-toolbar">
-        <a href="../kontakt.html" class="aim-tb-btn">IM</a>
-        <a href="../shows.html" class="aim-tb-btn">Chat</a>
-        <a href="../vita.html" class="aim-tb-btn">Info</a>
+        <a href="kontakt.html" class="aim-tb-btn">IM</a>
+        <a href="shows.html" class="aim-tb-btn">Chat</a>
+        <a href="vita.html" class="aim-tb-btn">Info</a>
         <span class="aim-tb-btn">Away</span>
       </div>
     </div>
