--- a/90s_overlay/index-geocities.html
+++ b/90s_overlay/index-geocities.html
@@ -253,7 +253,7 @@
     <div class="box-title">~~~ LIVE SHOWS ~~~</div>
     <div id="shows-gc"><p style="font-size:0.8rem">Laedt...</p></div>
     <br>
-    <a href="../shows.html" class="btn-gc">ALLE SHOWS ANZEIGEN</a>
+    <a href="shows.html" class="btn-gc">ALLE SHOWS ANZEIGEN</a>
   </div>
 
   <hr class="divider">
@@ -263,19 +263,15 @@
     <div class="box-title">~~~ NAVIGATION ~~~</div>
     <table class="nav-table">
       <tr>
-        <td><a href="../vita.html">VITA</a></td>
-        <td><a href="../musik.html">PIANO</a></td>
-        <td><a href="../improvisation.html">IMPROV</a></td>
-        <td><a href="../zamoranoandstamer.html">Z &amp; S</a></td>
+        <td><a href="vita.html">VITA</a></td>
+        <td><a href="musik.html">PIANO</a></td>
+        <td><a href="improvisation.html">IMPROV</a></td>
+        <td><a href="zamoranoandstamer.html">Z &amp; S</a></td>
       </tr>
       <tr>
-        <td><a href="../healing.html">HEALING</a></td>
-        <td><a href="../mental-pocus-records.html">MPR</a></td>
-        <td><a href="../shows.html">SHOWS</a></td>
-        <td><a href="../kontakt.html">KONTAKT</a></td>
-      </tr>
-      <tr>
-        <td colspan="4"><a href="labyrinth.html">*** LABYRINTH GAME ***</a></td>
+        <td><a href="shows.html">SHOWS</a></td>
+        <td><a href="kontakt.html">KONTAKT</a></td>
+        <td colspan="2"><a href="labyrinth.html">LABYRINTH</a></td>
       </tr>
     </table>
   </div>
@@ -285,7 +281,7 @@
   <!-- Guestbook -->
   <div class="guestbook-strip">
     [GAESTEBUCH] &gt; 0 Eintraege &bull; Sei der Erste! &bull;
-    <a href="../kontakt.html" style="color:#ff00ff">Eintrag hinzufuegen &gt;&gt;</a>
+    <a href="kontakt.html" style="color:#ff00ff">Eintrag hinzufuegen &gt;&gt;</a>
   </div>
 
   <!-- Footer -->
