--- a/90s_overlay/index-ps1.html
+++ b/90s_overlay/index-ps1.html
@@ -331,7 +331,7 @@
         <div id="shows-ps1"><div style="color:#6666aa;font-size:11px;">LOADING SAVE DATA...</div></div>
       </div>
       <div class="ps1-btnrow">
-        <a href="../shows.html" class="ps1-btn">ALL SHOWS</a>
+        <a href="shows.html" class="ps1-btn">ALL SHOWS</a>
       </div>
     </div>
 
@@ -339,12 +339,11 @@
     <div class="ps1-panel">
       <div class="ps1-panel-title">SELECT STAGE</div>
       <div class="ps1-panel-body" style="padding:4px 0;">
-        <div class="ps1-item sel"><span class="ps1-item-dot"></span>VITA</div>
-        <div class="ps1-item" onclick="window.location='../musik.html'"><span class="ps1-item-dot"></span>PIANO</div>
-        <div class="ps1-item" onclick="window.location='../improvisation.html'"><span class="ps1-item-dot"></span>IMPROVISATION</div>
-        <div class="ps1-item" onclick="window.location='../shows.html'"><span class="ps1-item-dot"></span>SHOWS</div>
-        <div class="ps1-item" onclick="window.location='../kontakt.html'"><span class="ps1-item-dot"></span>KONTAKT</div>
-        <div class="ps1-item" onclick="window.location='../mental-pocus-records.html'"><span class="ps1-item-dot"></span>MENTAL POCUS RECORDS</div>
+        <div class="ps1-item sel" onclick="window.location='vita.html'"><span class="ps1-item-dot"></span>VITA</div>
+        <div class="ps1-item" onclick="window.location='musik.html'"><span class="ps1-item-dot"></span>PIANO</div>
+        <div class="ps1-item" onclick="window.location='improvisation.html'"><span class="ps1-item-dot"></span>IMPROVISATION</div>
+        <div class="ps1-item" onclick="window.location='shows.html'"><span class="ps1-item-dot"></span>SHOWS</div>
+        <div class="ps1-item" onclick="window.location='kontakt.html'"><span class="ps1-item-dot"></span>KONTAKT</div>
         <div class="ps1-item" onclick="window.location='labyrinth.html'"><span class="ps1-item-dot"></span>LABYRINTH [BONUS STAGE]</div>
       </div>
       <div class="ps1-btnrow">
