--- a/90s_overlay/vita.html
+++ b/90s_overlay/vita.html
@@ -230,36 +230,23 @@
          alt="Foto: Nils Joehnk" />
 
     <p>
-      Stellen Sie sich vor, Thom Yorke haette Klavierunterricht bei Bach und Brad Mehldau
-      genommen und wuerde dann ueber Minimal Music mit Pharoah Sanders improvisieren --
-      das ist eine der vielen Moeglichkeiten, wie man die Musik von Martin Zamorano beschreiben koennte.
+      Stell dir vor, jemand hat sehr, sehr lange Klavier geubt und fragt sich jetzt, ob das eine gute Idee war.
     </p>
 
     <p>
-      <strong style="color:#00ffff">Martin Zamorano</strong> (*1995, Madrid) ist ein in Hamburg
-      lebender Pianist, Komponist und Musikpaedagoge. Seine klangliche Identitaet ist gepraegt von
-      einem genreuebergreifenden Ansatz, der seine klassischen Wurzeln mit Jazztradition, Popkultur,
-      Folk und freier Improvisation verbindet.
+      <strong style="color:#00ffff">Martin Zamorano</strong> (*1995, Madrid) drueckt Tasten. Manchmal klingen die Tasten gut. Er wohnt in Hamburg, wo es oft regnet.
     </p>
 
     <p>
-      Nach einer klassischen Klavierausbildung am Konservatorium Arturo Soria in Madrid studierte er
-      Komposition (B. Mus.) und Musiktheorie (M. Mus.) an der Hochschule fuer Musik und Theater Hamburg --
-      gefolgt von einem zweiten Master in Jazz Performance &amp; Production. Er ist aktiv in Hamburgs
-      Musikszene -- von popnahen Projekten mit FiNDiNG CLEO und seinem Folkduo Zamorano&amp;Stamer
-      bis hin zu avantgardistischer Improvisation im Jazzquartett WARMBLUETIG.
+      Er hat viele Abschluesse gesammelt, weil er nicht wusste, wann er aufhoeren soll. Er spielt in mehreren Bands, von denen die meisten Menschen noch nie gehoert haben. Das nennt man Kunst.
     </p>
 
     <p>
-      2023 gruendete er das ECOllective Ensemble, seit 2024 ist er Mitinitiator des experimentellen
-      Labels Mental Pocus Records. In der Spielzeit 2025/26 arbeitet er erstmals mit dem
-      Deutschen SchauSpielHaus Hamburg -- fuer die Produktion
-      <em style="color:#ffff00">Vampire's Mountain</em> von Philippe Quesne.
+      Er hat mal einen Preis gewonnen. Er weiss nicht mehr genau wofuer. Er arbeitet jetzt am Theater, weil Musiker sich manchmal verirren.
     </p>
 
     <p>
-      Seit 2021 lehrt er Musiktheorie an der Hochschule fuer Musik Luebeck, seit 2023 unterrichtet er
-      Klavier fuer Popularmusik an der Staatlichen Jugendmusikschule Hamburg.
+      Er bringt Kindern bei, wie man Klavier spielt. Die Kinder fragen, wann die Pause ist.
     </p>
 
     <div style="clear:both"></div>
@@ -350,13 +337,11 @@
     <div class="box-title">~~~ NAVIGATION ~~~</div>
     <div style="display:flex; flex-wrap:wrap; gap:4px; justify-content:center;">
       <a href="index.html" class="btn-gc">HOME</a>
-      <a href="../musik.html" class="btn-gc">PIANO</a>
-      <a href="../improvisation.html" class="btn-gc">IMPROV</a>
-      <a href="../zamoranoandstamer.html" class="btn-gc">Z &amp; S</a>
-      <a href="../healing.html" class="btn-gc">HEALING</a>
-      <a href="../mental-pocus-records.html" class="btn-gc">MPR</a>
-      <a href="../shows.html" class="btn-gc">SHOWS</a>
-      <a href="../kontakt.html" class="btn-gc">KONTAKT</a>
+      <a href="musik.html" class="btn-gc">PIANO</a>
+      <a href="improvisation.html" class="btn-gc">IMPROV</a>
+      <a href="zamoranoandstamer.html" class="btn-gc">Z &amp; S</a>
+      <a href="shows.html" class="btn-gc">SHOWS</a>
+      <a href="kontakt.html" class="btn-gc">KONTAKT</a>
       <a href="labyrinth.html" class="btn-gc">LABYRINTH!!!</a>
     </div>
   </div>
