--- a/90s_overlay/musik.html
+++ b/90s_overlay/musik.html
@@ -50,7 +50,7 @@
         <img src="../assets/images/a3363914671_10.jpg" style="width:100px;height:100px;object-fit:cover;border:2px inset #808080;flex-shrink:0;" alt="Album Cover" />
         <div>
           <strong>Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox</strong>
-          <p style="font-size:0.8rem;margin:6px 0;">Das neue Album -- jetzt auf Bandcamp.</p>
+          <p style="font-size:0.8rem;margin:6px 0;">Das Album, auf das niemand gewartet hat! -- jetzt erhaeltlich auf keiner Ihrer Lieblings-Musik-Streaming-Platforms.</p>
           <a href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank"><button>Auf Bandcamp anhoeren &raquo;</button></a>
         </div>
       </div>
@@ -68,7 +68,7 @@
           <p class="video-title">El Perro de San Roque</p>
           <div class="yt-thumb" data-vid="CBdmE6M_myM">
             <img src="https://img.youtube.com/vi/CBdmE6M_myM/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
         <div>
@@ -138,8 +138,6 @@
         <a href="vita.html"><button>Vita</button></a>
         <a href="improvisation.html"><button>Improvisation</button></a>
         <a href="zamoranoandstamer.html"><button>Zamorano &amp; Stamer</button></a>
-        <a href="healing.html"><button>Healing</button></a>
-        <a href="mental-pocus-records.html"><button>Mental Pocus Records</button></a>
         <a href="shows.html"><button>Shows</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
         <a href="../musik.html"><button>Normale Version</button></a>
