--- a/90s_overlay/shows.html
+++ b/90s_overlay/shows.html
@@ -6,124 +6,323 @@
   <title>Shows -- Martin Zamorano</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
   <style>
-    body{background-color:#008080;font-family:Arial,sans-serif;padding:20px;margin:0;}
-    .desktop{max-width:780px;margin:0 auto;display:flex;flex-direction:column;gap:16px;padding-bottom:50px;}
-    .window-body{padding:12px;}
-    marquee{background:navy;color:yellow;font-weight:bold;font-size:.9rem;padding:4px 0;margin:8px 0;}
-    .nav-btns{display:flex;flex-wrap:wrap;gap:4px;margin-top:8px;}
-    .nav-btns a{text-decoration:none;}
-    table{width:100%;border-collapse:collapse;font-size:.78rem;}
-    th{background:#000080;color:#fff;padding:4px 6px;text-align:left;border:1px solid #808080;}
-    td{padding:3px 6px;border:1px solid #c0c0c0;vertical-align:top;}
-    tr:nth-child(odd) td{background:#f0f0f0;}
-    tr:nth-child(even) td{background:#fff;}
-    .past td{color:#888;}
-    .taskbar{position:fixed;bottom:0;left:0;right:0;background:#c0c0c0;border-top:2px solid #fff;display:flex;align-items:center;gap:4px;padding:2px 4px;z-index:999;height:36px;}
-    .taskbar-clock{margin-left:auto;font-size:.75rem;border:1px inset #808080;padding:2px 8px;}
+    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+    body {
+      background: radial-gradient(ellipse at center, #1a1a4e 0%, #000010 100%);
+      font-family: 'Share Tech Mono', 'Courier New', monospace;
+      margin: 0;
+      padding: 20px;
+      min-height: 100vh;
+    }
+
+    /* CRT scanlines */
+    body::after {
+      content: '';
+      position: fixed;
+      inset: 0;
+      background: repeating-linear-gradient(
+        to bottom, transparent, transparent 3px,
+        rgba(0,0,0,0.18) 3px, rgba(0,0,0,0.18) 4px
+      );
+      pointer-events: none;
+      z-index: 9990;
+    }
+
+    .desktop {
+      max-width: 780px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      padding-bottom: 50px;
+    }
+
+    /* Override 98.css window chrome for PS1 palette */
+    .window {
+      background: linear-gradient(180deg, #2a2a5e 0%, #1a1a3e 100%);
+      border: 1px solid #4a4a8e;
+      box-shadow: none;
+    }
+
+    .title-bar {
+      background: linear-gradient(to right, #3a3a8e, #2a2a6e) !important;
+      border-bottom: 1px solid #4a4a8e;
+      padding: 4px 8px !important;
+    }
+
+    .title-bar-text {
+      color: #aaaaee !important;
+      font-family: 'Share Tech Mono', monospace !important;
+      font-size: 11px !important;
+      letter-spacing: 2px !important;
+    }
+
+    .title-bar-controls button {
+      filter: hue-rotate(200deg) brightness(0.7);
+    }
+
+    .window-body {
+      padding: 12px;
+      background: transparent;
+    }
+
+    /* Status bar */
+    .status-bar { border-top: 1px solid #3a3a6e !important; }
+    .status-bar-field {
+      color: #6666aa !important;
+      font-family: 'Share Tech Mono', monospace !important;
+      font-size: 10px !important;
+      background: transparent !important;
+      border-color: #3a3a6e !important;
+    }
+
+    /* Marquee */
+    marquee {
+      background: #0a0a2e;
+      color: #aaaaff;
+      font-family: 'Share Tech Mono', monospace;
+      font-weight: bold;
+      font-size: .85rem;
+      padding: 4px 0;
+      margin: 0;
+      border: 1px solid #3a3a6e;
+      letter-spacing: 1px;
+    }
+
+    /* PS1 top bar inside window */
+    .ps1-topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 11px;
+      letter-spacing: 2px;
+      color: #8888cc;
+      margin-bottom: 10px;
+      padding-bottom: 6px;
+      border-bottom: 1px solid #3a3a6e;
+    }
+
+    .ps1-logo {
+      font-size: 1rem;
+      font-weight: bold;
+      letter-spacing: 4px;
+      color: #ccccff;
+      text-shadow: 0 0 8px #6666ff;
+    }
+
+    .save-dot {
+      width: 7px; height: 7px;
+      background: #ff4444;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 5px;
+      animation: blink 1.2s ease-in-out infinite;
+    }
+    @keyframes blink { 0%,100%{opacity:1;} 50%{opacity:0.1;} }
+
+    /* Show rows */
+    .ps1-show-row {
+      padding: 6px 0;
+      border-bottom: 1px solid #2a2a5e;
+      display: grid;
+      grid-template-columns: 82px 1fr auto;
+      gap: 6px 12px;
+      align-items: baseline;
+      font-size: 11px;
+      letter-spacing: .5px;
+    }
+    .ps1-show-row:last-child { border-bottom: none; }
+    .ps1-show-date    { color: #8888ff; white-space: nowrap; font-variant-numeric: tabular-nums; }
+    .ps1-show-venue   { color: #ddddff; }
+    .ps1-show-venue a { color: #aaaaff; text-decoration: none; }
+    .ps1-show-venue a:hover { color: #fff; }
+    .ps1-show-city    { color: #6666aa; font-size: 10px; white-space: nowrap; }
+    .ps1-show-project { grid-column: 2 / -1; color: #6666aa; font-size: 10px; font-style: italic; letter-spacing: 1px; }
+    .ps1-show-row--past { opacity: .4; }
+
+    .ps1-empty { color: #6666aa; font-size: 11px; letter-spacing: 1px; padding: 4px 0; }
+
+    /* Nav buttons — PS1 styled */
+    .nav-btns { display: flex; flex-wrap: wrap; gap: 4px; margin-top: 8px; }
+    .nav-btns a { text-decoration: none; }
+    .nav-btns button {
+      background: linear-gradient(180deg, #2a2a6e, #1a1a4e);
+      color: #aaaaee;
+      border: 1px solid #4a4a8e;
+      font-family: 'Share Tech Mono', monospace;
+      font-size: .72rem;
+      letter-spacing: 1px;
+      padding: 3px 10px;
+      cursor: pointer;
+    }
+    .nav-btns button:hover { background: #3a3a8e; color: #fff; }
+    .nav-btns button:active { background: #1a1a3e; }
+
+    /* Taskbar — PS1 */
+    .taskbar {
+      position: fixed;
+      bottom: 0; left: 0; right: 0;
+      background: linear-gradient(to right, #1a1a4e, #0a0a2e, #1a1a4e);
+      border-top: 1px solid #3a3a6e;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      padding: 0 8px;
+      gap: 12px;
+      z-index: 9989;
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 11px;
+      color: #6666aa;
+      letter-spacing: 1px;
+    }
+
+    .ps1-hint { display: flex; align-items: center; gap: 4px; }
+    .ps1-sym {
+      width: 14px; height: 14px;
+      border-radius: 50%;
+      display: inline-flex; align-items: center; justify-content: center;
+      font-size: 9px; font-weight: bold;
+    }
+    .sym-x { background:#224; border:1px solid #55f; color:#88f; }
+    .sym-o { background:#422; border:1px solid #f55; color:#f88; }
+    .taskbar-clock { margin-left: auto; border: 1px solid #3a3a6e; padding: 1px 8px; }
+
+    @media (max-width: 600px) {
+      .ps1-show-row { grid-template-columns: 70px 1fr; }
+      .ps1-show-city { display: none; }
+    }
   </style>
 </head>
 <body>
 <div class="desktop">
 
+  <!-- Header window -->
   <div class="window">
     <div class="title-bar">
-      <div class="title-bar-text">Shows -- Martin Zamorano</div>
+      <div class="title-bar-text">MARTIN ZAMORANO // SHOWS</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
         <button aria-label="Close" onclick="window.location='index.html'"></button>
       </div>
     </div>
+    <div class="window-body" style="padding:0;">
+      <marquee behavior="scroll" direction="left" id="marquee-text">*** LOADING SHOWS DATA ***</marquee>
+    </div>
+  </div>
+
+  <!-- Upcoming shows -->
+  <div class="window">
+    <div class="title-bar"><div class="title-bar-text">UPCOMING SHOWS</div></div>
     <div class="window-body">
-      <marquee id="marquee-text">** LOADING SHOWS DATA **</marquee>
+      <div class="ps1-topbar">
+        <span class="ps1-logo">SHOWS</span>
+        <span>MEMORY CARD</span>
+        <span id="ps1-status"><span class="save-dot"></span>LOADING...</span>
+      </div>
+      <div id="shows-upcoming"><p class="ps1-empty">LOADING SAVE DATA...</p></div>
+    </div>
+    <div class="status-bar">
+      <p class="status-bar-field" id="shows-count">-- shows found</p>
     </div>
   </div>
 
+  <!-- Past shows -->
+  <div class="window" id="past-window" style="display:none;">
+    <div class="title-bar"><div class="title-bar-text">PAST SHOWS</div></div>
+    <div class="window-body">
+      <div id="shows-past"></div>
+    </div>
+  </div>
+
+  <!-- Navigation -->
   <div class="window">
-    <div class="title-bar"><div class="title-bar-text">Upcoming Shows</div></div>
-    <div class="window-body" id="shows-upcoming">
-      <p style="font-size:.8rem;">Loading...</p>
-    </div>
-  </div>
-
-  <div class="window" id="past-window">
-    <div class="title-bar"><div class="title-bar-text">Past Shows</div></div>
-    <div class="window-body" id="shows-past">
-      <p style="font-size:.8rem;">Loading...</p>
-    </div>
-  </div>
-
-  <div class="window">
-    <div class="title-bar"><div class="title-bar-text">Navigation</div></div>
+    <div class="title-bar"><div class="title-bar-text">SELECT STAGE</div></div>
     <div class="window-body">
       <div class="nav-btns">
-        <a href="index.html"><button>&#8592; Home</button></a>
-        <a href="vita.html"><button>Vita</button></a>
-        <a href="musik.html"><button>Piano</button></a>
-        <a href="improvisation.html"><button>Improvisation</button></a>
-        <a href="zamoranoandstamer.html"><button>Z&amp;S</button></a>
-        <a href="healing.html"><button>Healing</button></a>
-        <a href="mental-pocus-records.html"><button>MPR</button></a>
-        <a href="kontakt.html"><button>Kontakt</button></a>
-        <a href="../shows.html"><button>Normale Version</button></a>
+        <a href="index.html"><button>[ ← ] HOME</button></a>
+        <a href="vita.html"><button>[ X ] VITA</button></a>
+        <a href="musik.html"><button>[ □ ] PIANO</button></a>
+        <a href="improvisation.html"><button>[ △ ] IMPROV</button></a>
+        <a href="zamoranoandstamer.html"><button>[ ○ ] Z&amp;S</button></a>
+        <a href="kontakt.html"><button>[ START ] KONTAKT</button></a>
+        <a href="labyrinth.html"><button>[ SELECT ] LABYRINTH</button></a>
+        <a href="slap.html"><button>[ R1 ] SLAP-O-MAT</button></a>
+        <a href="../shows.html"><button>[ L2 ] NORMALE VERSION</button></a>
       </div>
     </div>
     <div class="status-bar">
       <p class="status-bar-field">&copy; 2026 Martin Zamorano</p>
-      <p class="status-bar-field"><a href="../impressum.html">Impressum</a> &middot; <a href="../datenschutz.html">Datenschutz</a></p>
+      <p class="status-bar-field"><a href="../impressum.html" style="color:#6666aa;">Impressum</a> &middot; <a href="../datenschutz.html" style="color:#6666aa;">Datenschutz</a></p>
     </div>
   </div>
 
-</div>
+</div><!-- /.desktop -->
+
+<!-- PS1 bottom bar -->
 <div class="taskbar">
-  <button>Start</button>
-  <button style="font-size:.75rem;padding:2px 10px;min-width:120px;text-align:left;">Shows</button>
+  <div class="ps1-hint"><span class="ps1-sym sym-x">X</span> SELECT</div>
+  <div class="ps1-hint"><span class="ps1-sym sym-o">O</span> BACK</div>
   <div class="taskbar-clock" id="clock">00:00</div>
 </div>
 
 <script src="../assets/shows-data.js"></script>
 <script>
 (function(){
-  var n=new Date();
-  document.getElementById("clock").textContent=n.getHours().toString().padStart(2,"0")+":"+n.getMinutes().toString().padStart(2,"0");
+  var n = new Date();
+  document.getElementById('clock').textContent =
+    n.getHours().toString().padStart(2,'0') + ':' + n.getMinutes().toString().padStart(2,'0');
 
-  function parseDate(str){var p=str.split('.');return new Date(+p[2],+p[1]-1,+p[0]);}
+  function parseDate(str){ var p=str.split('.'); return new Date(+p[2],+p[1]-1,+p[0]); }
 
-  var today=new Date();today.setHours(0,0,0,0);
-  var upcoming=[],past=[];
+  var today = new Date(); today.setHours(0,0,0,0);
+  var upcoming = [], past = [];
   (window.SHOWS_DATA||[]).forEach(function(s){
     (parseDate(s.date)>=today?upcoming:past).push(s);
   });
-  upcoming.sort(function(a,b){return parseDate(a.date)-parseDate(b.date);});
-  past.sort(function(a,b){return parseDate(b.date)-parseDate(a.date);});
+  upcoming.sort(function(a,b){ return parseDate(a.date)-parseDate(b.date); });
+  past.sort(function(a,b){ return parseDate(b.date)-parseDate(a.date); });
 
-  function buildTable(shows,isPast){
-    var rows=shows.map(function(s){
-      var venue=s.url?'<a href="'+s.url+'" target="_blank" rel="noopener">'+s.venue+'</a>':s.venue;
-      return '<tr class="'+(isPast?'past':'')+'"><td>'+s.date+'</td><td>'+venue+'</td><td>'+s.city+'</td><td>'+s.project+'</td></tr>';
+  function buildRows(shows, isPast){
+    return shows.map(function(s){
+      var venue = s.url
+        ? '<a href="'+s.url+'" target="_blank" rel="noopener">'+s.venue+'</a>'
+        : s.venue;
+      return '<div class="ps1-show-row'+(isPast?' ps1-show-row--past':'')+'">'
+        +'<span class="ps1-show-date">'+s.date+'</span>'
+        +'<span class="ps1-show-venue">'+venue+'</span>'
+        +'<span class="ps1-show-city">'+s.city+'</span>'
+        +'<span class="ps1-show-project">'+s.project+'</span>'
+        +'</div>';
     }).join('');
-    return '<table><thead><tr><th>Datum</th><th>Venue</th><th>Stadt</th><th>Projekt</th></tr></thead><tbody>'+rows+'</tbody></table>';
   }
 
-  var upEl=document.getElementById('shows-upcoming');
-  var pastEl=document.getElementById('shows-past');
+  var upEl   = document.getElementById('shows-upcoming');
+  var pastEl = document.getElementById('shows-past');
 
-  if(upcoming.length){
-    upEl.innerHTML=buildTable(upcoming,false);
+  if (upcoming.length) {
+    upEl.innerHTML = buildRows(upcoming, false);
+    document.getElementById('ps1-status').innerHTML =
+      '<span class="save-dot"></span>'+upcoming.length+' SHOWS FOUND';
+    document.getElementById('shows-count').textContent = upcoming.length + ' upcoming shows';
   } else {
-    upEl.innerHTML='<p style="font-size:.8rem;">Keine bevorstehenden Shows.</p>';
+    upEl.innerHTML = '<p class="ps1-empty">NO SAVE DATA — KEINE BEVORSTEHENDEN SHOWS.</p>';
+    document.getElementById('ps1-status').innerHTML =
+      '<span class="save-dot" style="background:#888"></span>NO SAVE DATA';
+    document.getElementById('shows-count').textContent = '0 shows found';
   }
 
-  if(past.length){
-    pastEl.innerHTML=buildTable(past,true);
-  } else {
-    pastEl.innerHTML='<p style="font-size:.8rem;">Keine vergangenen Shows.</p>';
+  if (past.length) {
+    pastEl.innerHTML = buildRows(past, true);
+    document.getElementById('past-window').style.display = '';
   }
 
-  var marqueeText=upcoming.length
-    ? upcoming.map(function(s){return s.date+' @ '+s.venue+', '+s.city;}).join(' *** ')
-    : 'Keine bevorstehenden Shows';
-  document.getElementById('marquee-text').textContent='*** '+marqueeText+' ***';
+  // Marquee with upcoming show names
+  var marqueeText = upcoming.length
+    ? upcoming.map(function(s){ return s.date+' @ '+s.venue+', '+s.city; }).join(' *** ')
+    : 'KEINE BEVORSTEHENDEN SHOWS';
+  document.getElementById('marquee-text').textContent = '>>> ' + marqueeText + ' <<<';
 })();
 </script>
 </body>
