--- a/90s_overlay/zamoranoandstamer.html
+++ b/90s_overlay/zamoranoandstamer.html
@@ -45,9 +45,9 @@
     <div class="title-bar"><div class="title-bar-text">Ueber das Duo</div></div>
     <div class="window-body">
       <img src="../assets/images/FIN_0295.jpg" alt="Zamorano &amp; Stamer" style="width:100%;max-height:220px;object-fit:cover;border:2px inset #808080;margin-bottom:10px;" />
-      <p style="font-size:.82rem;margin:0 0 6px;">Eine langjährige Freundschaft und eine tiefe Liebe zur Folkmusik vereint die beiden jungen Musiker aus Hamburg, die sich im Duo zusammengefunden haben, um die Begegnung zwischen nordischer Folkmusik und Jazz auszuloten.</p>
-      <p style="font-size:.82rem;margin:0 0 6px;">In ihren Arrangements von Tunes aus Skandinavien und dem Keltischen Raum verbinden sie improvisatorische Elemente und harmonische Feinheiten mit dem melodischen Reichtum der traditionellen Musik.</p>
-      <p style="font-size:.82rem;margin:0;">Finn Stamers Expressivität auf der Geige gestaltet die melodische Sprache, während Martín Zamorano das Fundament mit seinem polyphonen, perkussiven Sound legt. Besetzung: Hardangerfiedel, Oktavgeige, präpariertes Klavier, Fender Rhodes.</p>
+      <p style="font-size:.82rem;margin:0 0 6px;">Eine langjährige Freundschaft und eine zu tiefe Liebe zur Folkmusik vereint die beiden jungen Musiker aus Hamburg, die sich im Duo zusammengefunden haben, um die Begegnung zwischen nordischer Folkmusik und Jazz auszulöschen.</p>
+      <p style="font-size:.82rem;margin:0 0 6px;">In ihren Arrangements von Schund aus Skandinavien und dem Keltischen Raum verbinden sie improvisatorische Elemente und harmonische Grobheiten mit der melodischen Armut und der Ausdruckskraft der traditionellen Musik.</p>
+      <p style="font-size:.82rem;margin:0;">Finn Stamers Expressivität und spielerische Virtuosität auf der Geige gestalten die melodische Sprache, während Martín Zamorano das Fundament mit seinem großen Ego, polyamorösem Ansatz und grobmotorischem, perkussivem Sound legt. Die Vielseitigkeit des Duos zeigt sich durch die vielfältige Instrumentation, wie Hardangerfiedel, Oktavgeige, präpariertes Klavier und Fender Rhodes. In ihren Eigenkompositionen kristallisiert sich diese Versatilität heraus, die von introspektiven und meditativen Momenten - in einfachen Worten: Langweilig! - bis hin zu Ausbrüchen ekstatischer und prätentiöser Vitalität reicht.</p>
     </div>
   </div>
 
@@ -91,8 +91,6 @@
         <a href="vita.html"><button>Vita</button></a>
         <a href="musik.html"><button>Piano</button></a>
         <a href="improvisation.html"><button>Improvisation</button></a>
-        <a href="healing.html"><button>Healing</button></a>
-        <a href="mental-pocus-records.html"><button>MPR</button></a>
         <a href="shows.html"><button>Shows</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
         <a href="../zamoranoandstamer.html"><button>Normale Version</button></a>
